Move build() into and implement test() in Project